--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "com.gruijter.powerhour",
-  "version": "5.9.2",
+  "version": "6.0.0",
   "description": "Summarize the energy usage or (solar) production per hour, day, month and year",
   "main": "app.js",
   "scripts": {
@@ -16,6 +16,7 @@
     "url": "https://github.com/gruijter/com.gruijter.powerhour.git"
   },
   "dependencies": {
+    "glpk.js": "^4.0.2",
     "homey-api": "^3.4.9",
     "xml-js": "^1.6.11"
   }
