--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "_comment": "This file is generated. Please edit .homeycompose/app.json instead.",
   "id": "com.gruijter.powerhour",
-  "version": "6.0.0",
+  "version": "6.0.1",
   "compatibility": ">=8.0.0",
   "brandColor": "#df5020",
   "sdk": 3,
@@ -498,6 +498,73 @@
           }
         ],
         "id": "new_prices"
+      },
+      {
+        "highlight": true,
+        "title": {
+          "en": "New ROI power available.",
+          "nl": "Nieuw ROI vermogen beschikbaar.",
+          "de": "Neue ROI-Leistung verfügbar."
+        },
+        "titleFormatted": {
+          "en": "New ROI power available, with minimum [[minPriceDelta]] price delta.",
+          "nl": "Nieuwe ROI vermogen beschikbaar, met minimaal [[minPriceDelta]] prijsverschil.",
+          "de": "Neue ROI-Leistung verfügbar, mit minimalen [[minPriceDelta]] Preisdifferenz."
+        },
+        "hint": {
+          "en": "The strategy is calculated using future hourly prices, the battery settings, and the set minimum price difference.",
+          "nl": "De strategie wordt berekend met behulp van toekomstige prijzen, de batterij instellingen, en het ingestelde minimale prijsverschil.",
+          "de": "Die Strategie wird berechnet anhand zukünftigen Stundenpreise, die Batterieeinstellungen, und der eingestellten minimalen Preisdifferenz."
+        },
+        "args": [
+          {
+            "type": "device",
+            "name": "device",
+            "filter": "driver_id=battery"
+          },
+          {
+            "type": "number",
+            "name": "minPriceDelta",
+            "title": {
+              "en": "price delta",
+              "nl": "prijsverschil",
+              "de": "Preisdifferenz"
+            },
+            "min": 0,
+            "value": 0.1
+          }
+        ],
+        "tokens": [
+          {
+            "name": "power",
+            "type": "number",
+            "title": {
+              "en": "Power"
+            }
+          },
+          {
+            "name": "duration",
+            "type": "number",
+            "title": {
+              "en": "Duration (minutes)"
+            }
+          },
+          {
+            "name": "endSoC",
+            "type": "number",
+            "title": {
+              "en": "SoC afterwards (%)"
+            }
+          },
+          {
+            "name": "scheme",
+            "type": "string",
+            "title": {
+              "en": "Scheme JSON"
+            }
+          }
+        ],
+        "id": "new_roi_strategy"
       },
       {
         "title": {
@@ -2741,14 +2808,14 @@
           "de": "Berechne die beste ROI-Leistung."
         },
         "titleFormatted": {
-          "en": "Calculate the best ROI power, with minimum [[minPriceDelta]]€ price delta.",
-          "nl": "Bereken het beste ROI vermogen, met minimaal [[minPriceDelta]]€ prijsverschil.",
-          "de": "Berechne die beste ROI-Leistung, mit minimalen [[minPriceDelta]]€ Preisdifferenz."
+          "en": "Calculate the best ROI power, with minimum [[minPriceDelta]] price delta.",
+          "nl": "Bereken het beste ROI vermogen, met minimaal [[minPriceDelta]] prijsverschil.",
+          "de": "Berechne die beste ROI-Leistung, mit minimalen [[minPriceDelta]] Preisdifferenz."
         },
         "hint": {
-          "en": "The strategy is calculated using the battery settings, all known future hourly prices, and the set minimum price difference. WARNING: This flow uses a lot of CPU!",
-          "nl": "De strategie wordt berekend met behulp van de batterij instellingen, alle bekende toekomstige prijzen, en het ingestelde minimale prijsverschil. LET OP: deze flow gebruikt veel CPU!",
-          "de": "Die Strategie wird berechnet anhand die Batterieeinstellungen, alle bekannten zukünftigen Stundenpreise, und der eingestellten minimalen Preisdifferenz. ACHTUNG: Dieser Flow verbraucht viel CPU!"
+          "en": "The strategy is calculated using future hourly prices, the battery settings, and the set minimum price difference.",
+          "nl": "De strategie wordt berekend met behulp van toekomstige prijzen, de batterij instellingen, en het ingestelde minimale prijsverschil.",
+          "de": "Die Strategie wird berechnet anhand zukünftigen Stundenpreise, die Batterieeinstellungen, und der eingestellten minimalen Preisdifferenz."
         },
         "args": [
           {
@@ -2763,9 +2830,6 @@
               "en": "price delta",
               "nl": "prijsverschil",
               "de": "Preisdifferenz"
-            },
-            "placeholder": {
-              "en": "> 0.05"
             },
             "min": 0,
             "value": 0.1
@@ -3965,8 +4029,9 @@
               "min": 0,
               "value": 0,
               "hint": {
-                "en": "Automatically updated once an hour.",
-                "nl": "Eenmaal per uur automatisch geupdated."
+                "en": "This value is automatically generated and updated once an hour. It is advised not to change this value, unless you need to.",
+                "nl": "Deze waarde wordt automatisch gegenereerd en één keer per uur bijgewerkt. Het wordt aanbevolen deze waarde niet te wijzigen, tenzij dit noodzakelijk is.",
+                "de": "Dieser Wert wird automatisch generiert und einmal pro Stunde aktualisiert. Es wird empfohlen, diesen Wert nicht zu ändern, es sei denn, dies ist erforderlich."
               }
             }
           ]
