--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "_comment": "This file is generated. Please edit .homeycompose/app.json instead.",
   "id": "com.gruijter.powerhour",
-  "version": "6.1.0",
+  "version": "6.1.1",
   "compatibility": ">=8.0.0",
   "brandColor": "#df5020",
   "sdk": 3,
@@ -3519,11 +3519,11 @@
           "nl": "Zet waarden voor Batterij XOM flow."
         },
         "titleFormatted": {
-          "en": "Set Battery XOM flows. XOM-target: [[x]]W, moothingg: [[smoothing]]%, min. battery load: [[minLoad]]W.",
+          "en": "Set Battery XOM flows. XOM-target: [[x]]W, smoothing: [[smoothing]]%, min. battery load: [[minLoad]]W.",
           "nl": "Zet Batterij XOM flows. XOM-doel: [[x]]W, smoothing: [[smoothing]]%, min. accu vermogen: [[minLoad]]W."
         },
         "hint": {
-          "en": "Settings for Battery XOM flows. The battery power is calculated so that the cumulative usage will be close to the set XOM-target. Low smoothing gives faster response to short power peaks. Use 80% or higher for a more stable control.",
+          "en": "Settings for Battery XOM flows. The battery power is calculated so that the cumulative usage will be close to the set XOM-target. Low smoothing gives faster response to short power peaks. Use 50% or higher for a more stable control.",
           "nl": "Instellingen tbv thuisbatterij XOM flows. Het accu vermogen wordt zodanig berekend dat het cumulatieve verbruik het ingestelde XOM-doel nadert. Lage smoothing geeft een snellere respons op korte vermogenpieken. Gebruik 80% of hoger voor een stabielere sturing."
         },
         "args": [
@@ -3551,9 +3551,9 @@
               "en": "30 - 100 %",
               "nl": "30 - 100 %"
             },
-            "min": 30,
+            "min": 25,
             "max": 100,
-            "value": 80
+            "value": 50
           },
           {
             "type": "number",
@@ -3788,7 +3788,7 @@
                 "nl": "Max. ontlaadvermogen (W)",
                 "de": "Max. Entladungsleistung (W)"
               },
-              "value": 1700,
+              "value": 1550,
               "min": 0,
               "decimals": 0,
               "hint": {
