--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "_comment": "This file is generated. Please edit .homeycompose/app.json instead.",
   "id": "com.gruijter.powerhour",
-  "version": "6.1.4",
+  "version": "6.2.0",
   "compatibility": ">=8.0.0",
   "brandColor": "#df5020",
   "sdk": 3,
@@ -4708,6 +4708,19 @@
             "nl": "Overige instellingen"
           },
           "children": [
+            {
+              "id": "forecastEnable",
+              "type": "checkbox",
+              "label": {
+                "en": "Enable forecast prices",
+                "nl": "Prijsvoorspelling aanzetten"
+              },
+              "hint": {
+                "en": "Add AI pricing forecast (when available).",
+                "nl": "Voeg AI prijsvoorspellingen toe (indien beschikbaar)"
+              },
+              "value": false
+            },
             {
               "id": "tariff_update_group",
               "type": "number",
